--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="" href="/public/logo-project.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tech.edu.kh</title>
+    <title>khdemy.edu.kh</title>
   </head>
   <body>
     <div id="root"></div>
